修改management